# xrpl-hermes

./: .audit-prompt.md  .dev-audit-prompt.md  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LIMITATIONS.md  QUICKSTART.md  README.md  SECURITY.md  SKILL.md  STANDALONE.md  pyproject.toml  requirements.txt  setup.sh
deploy/: README.md  clio-config.json  docker-compose.yml  rippled.cfg
examples/: example-amm-deposit.py  example-build-payment.py  example-clawback.py  example-create-offer.py  example-cross-currency.py  example-discord-bot.py  example-evm-swap.py  example-mint-nft.py  example-multisig.py  example-nft-buy.py  example-setup-trustline.py  example-telegram-bot.py
knowledge/: 01-xrpl-accounts.md  02-xrpl-payments.md  03-xrpl-trustlines.md  04-xrpl-dex.md  05-xrpl-amm.md  06-xrpl-nfts.md  07-xrpl-clawback.md  08-xrpl-mpts.md  09-xrpl-escrow.md  10-xrpl-checks.md  11-xrpl-payment-channels.md  12-xrpl-multisig.md  13-xrpl-tickets.md  14-xrpl-consensus.md  15-xrpl-transaction-format.md  16-xrpl-clio.md  17-xrpl-private-node.md  18-xrpl-rate-limits.md  19-xrpl-transaction-costs.md  20-xrpl-data-api.md  21-xrpl-token-model.md  22-xrpl-token-issuance.md  23-xrpl-nft-minting.md  24-xrpl-deploy-guide.md  25-xrpl-audit-security.md  26-xrpl-xaman-deeplink.md  27-xrpl-joey-wallet.md  28-xrpl-privy-auth.md  29-xrpl-metamask-evm.md  30-xrpl-xrplpy.md  31-xrpl-xrpljs.md  32-xrpl-hooks-dev.md  33-xrpl-evm-dev.md  34-xrpl-amm-bots.md  35-xrpl-full-interop.md  36-xrpl-xls-standards.md  37-xrpl-amendments.md  38-xrpl-minting-ops.md  39-xrpl-nft-ops.md  (+24 more)
(+39 files in other folders)
